--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= link_to "Home", root_url %>
-    <%= link_to "About", about_path %>
-    <%= link_to "Support", support_path %>
-    <hr>
-  </head>
 
+
+  </head>
   <body>
+       <%= render 'layouts/header' %>
+
     <%= yield %>
+ <%= render 'layouts/footer' %>
+
   </body>
 </html>
