--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,7 @@
     <li><%= link_to "Home", root_path %></li>
     <li> <%= link_to "About", about_path %></li>
     <li> <%= link_to "Support", support_path %></li>
+    <li> <%= link_to "Log In", login_path %><li>
     <hr>
 </ul>
 
