--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,11 @@
     <li><%= link_to "Home", root_path %></li>
     <li> <%= link_to "About", about_path %></li>
     <li> <%= link_to "Support", support_path %></li>
+    <% if logged_in? %>
+        <li><%= link_to "Log out", "#" %> </li>
+        <% else %>
     <li> <%= link_to "Log In", login_path %><li>
+            <% end %>
     <hr>
 </ul>
 
