--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,8 @@
     <li> <%= link_to "About", about_path %></li>
     <li> <%= link_to "Support", support_path %></li>
     <% if logged_in? %>
-        <li><%= link_to "Log out", "#" %> </li>
+        <li><%= link_to "Log out", logout_path %> </li>
+        
         <% else %>
     <li> <%= link_to "Log In", login_path %><li>
             <% end %>
