--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
        <%= render 'layouts/header' %>
-
+       <#% flash.each do |message_type, message| %>
     <%= yield %>
  <%= render 'layouts/footer' %>
 
