--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,15 @@
 li {
     display: inline
 }
+messages{
+        color: black;
 
+}
+#messages.alert {
+        background-color: #800000;
+
+}
+#messages.success {
+        background-color:#808000; 
+
+}
