--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,19 @@
-<ul>
-    <li><%= link_to "Home", root_path %></li>
-    <li> <%= link_to "About", about_path %></li>
-    <li> <%= link_to "Support", support_path %></li>
-    <% if logged_in %>
-        <li><%= link_to "Log out", logout_path %> </li>
-        
-        <% else %>
-    <li> <%= link_to "Log In", login_path %><li>
-            <% end %>
-    <hr>
-</ul>
+<div class="top-bar">
+    <div class="top-bar-left">
+            <li><%= link_to "Home", root_path %></li>
+            <li> <%= link_to "About", about_path %></li>
+            <li> <%= link_to "Support", support_path %></li>
+        </ul>
+    </div>
+    <div class="top-bar-right">
+        <ul>
+            <% if logged_in %>
+                <li><%= link_to "Log out", logout_path %> </li>
 
+            <% else %>
+                <li> <%= link_to "Log In", login_path %><li>
+                    <% end %>
+        </ul>
+    </div>
+</div>
+<hr>
