--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
     <div class="top-bar-right">
         <ul>
             <% if logged_in %>
-                <li><%= link_to "Log out", logout_path %> </li>
+                <li><%= link_to "Log out", logout_path, method: :delete  %> </li>
 
             <% else %>
                 <li> <%= link_to "Log In", login_path %><li>
