--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
 <h1>BookLib</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<p> The book lib is a website for borrowing, and keeping books records</p>
 <p> <%= link_to "Signup", signup_path %>
+<p><%= image_tag('lib.jpg', width: 1300, height: 350, alt: "the library") %></p>
