--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,8 @@
     <div class="top-bar-right">
         <ul>
             <% if logged_in %>
+                <li> <%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Edit info", edit_user_path(current_user) %>
                 <li><%= link_to "Log out", logout_path, method: :delete  %> </li>
 
             <% else %>
