--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,5 +1,10 @@
-<h1>User#account_activation</h1>
+<h1>LibraryApp</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/account_activation.html.erb
+Hi <%= @user.username %>
 </p>
+<p> Welcome to this awesome Library application.
+Link the link below to activate your account </p>
+<%= link_to "Activate", edit_account_activation_url(@user.activation_token,
+                                                    email: @user.email) %>
+
