--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,3 +1,8 @@
-User#account_activation
+Hi
 
-<%= @greeting %>, find me in app/views/user_mailer/account_activation.text.erb
+<%= @user.username %>
+Welcome to this awesome Library application.
+Link the link below to activate your account 
+<%=  edit_account_activation_url(@user.activation_token,
+                                 email: @user.email) %>
+
