set info flash background color to blue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,10 +6,13 @@ messages{
 
 }
 #messages.danger {
-        background-color: #800000;
+        background-color: green;
 
 }
 #messages.success {
-        background-color:#808000; 
+        background-color:red; 
 
+}
+#messages.info {
+     background-color:blue;
 }
