template for giving username for  which to reset password for

--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,2 +1,6 @@
-<h1>PasswordResets#new</h1>
-<p>Find me in app/views/password_resets/new.html.erb</p>
+<h1> Password Reset </h1>
+    <%= form_for(:password_reset, url: password_resets_path) do |f| %>
+        <%= f.label :username %>
+        <%= f.text_field :username %> <br>
+        <%= f.submit "Submit" %>
+    <% end %>
