--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>PasswordResets#edit</h1>
-<p>Find me in app/views/password_resets/edit.html.erb</p>
+<h1>PasswordResets</h1>
+<%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
+    <%= render 'shared/error_messages' %>
+    <%= hidden_field_tag :username, @user.email %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %> 
+
+    <%= f.submit "Submit" %>
+    <% end %>
