--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -8,5 +8,5 @@
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %> 
 
-    <%= f.submit "Submit" %>
+    <%= f.submit "Update Password" %>
     <% end %>
