--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,6 +1,6 @@
 
-To reset password click the link below
+To reset your password click the link below:
 <%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
-This link will expire in  an hour
+This link will expire in three  hours.
 If you did not request your password to be reset, please ignore this email and
 your password will stay as it is.
