--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <div class="top-bar">
     <div class="top-bar-left">
-            <li><%= link_to "Home", root_path %></li>
-            <li> <%= link_to "About", about_path %></li>
-            <li> <%= link_to "Support", support_path %></li>
+        <li><%= link_to "Home", root_path %></li>
+        <li> <%= link_to "About", about_path %></li>
+        <li> <%= link_to "Support", support_path %></li>
         </ul>
     </div>
     <div class="top-bar-right">
@@ -11,10 +11,13 @@
                 <li> <%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Edit info", edit_user_path(current_user) %>
                 <li><%= link_to "Log out", logout_path, method: :delete  %> </li>
+                <% if admin %>
+                <li><%= link_to "Users", index_path %><li>
+                        <% end %>
+                    <% else %>
+                        <li> <%= link_to "Log In", login_path %><li>
+                            <% end %>
 
-            <% else %>
-                <li> <%= link_to "Log In", login_path %><li>
-                    <% end %>
         </ul>
     </div>
 </div>
