--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
                 <li> <%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Edit info", edit_user_path(current_user) %>
                 <li><%= link_to "Log out", logout_path, method: :delete  %> </li>
-                <% if admin %>
+                <% if current_user.admin? %>
                 <li><%= link_to "Users", index_path %><li>
                         <% end %>
                     <% else %>
