--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
             <% if logged_in %>
                 <li> <%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Edit info", edit_user_path(current_user) %>
+                <li><%= link_to "Books", books_url %>
                 <li><%= link_to "Log out", logout_path, method: :delete  %> </li>
                 <% if current_user.admin? %>
                 <li><%= link_to "Users", index_path %><li>
