--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,16 +1,14 @@
 <h1> Add a Book</h1>
-<% if current_user.admin %>
-    <% form_for @book, url: books_path, method: :add  do |f| %>
+    <%= form_for (@book) do |f| %>
         <%= f.label :title %>
         <%= f.text_field :title %><br>
         <%= f.label :category %>
         <%= f.text_field :category %><br>
         <%= f.label :quantity %>
-        <%= f.integer_field :quantity %><br>
+        <%= f.text_field :quantity %><br>
         <%= f.label :author %>
         <%= f.text_field :author %><br>
         <%= f.label :publisher %>
         <%= f.text_field :publisher %><br>
         <%= f.submit "Add" %>
-        <% end %>
         <% end %>
