--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
                 <li><%= link_to "Books", books_url %>
                 <li><%= link_to "Log out", logout_path, method: :delete  %> </li>
                 <% if current_user.admin? %>
+                    <li> <%= link_to "Add Book", new_book_path %> </li>
                 <li><%= link_to "Users", index_path %><li>
                         <% end %>
                     <% else %>
