--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,18 @@
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    
   </head>
 
   <body>
 
+      
     <%= render 'layouts/header' %>
+    <% flash.each do |type, msg| %>
+        <div id="flash" class="callout small <%= type %>" data-closable>
+    <%=  msg %></div>
+    <% end %>
+
     <%= yield %>
 
   </body>
