--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,16 @@
 <h1> Edit Book</h1>
-    <%= form_for (@book) do |f| %>
-        <%= f.label :title %>
-        <%= f.text_field :title %><br>
-        <%= f.label :category %>
-        <%= f.text_field :category %><br>
-        <%= f.label :quantity %>
-        <%= f.text_field :quantity %><br>
-        <%= f.label :author %>
-        <%= f.text_field :author %><br>
-        <%= f.label :publisher %>
-        <%= f.text_field :publisher %><br>
-        <%= f.submit "Save Changes" %>
-        <% end %>
+<%= form_for (@book) do |f| %>
+
+    <%= render 'shared/error_messages', object: f.object %>
+    <%= f.label :title %>
+    <%= f.text_field :title %><br>
+    <%= f.label :category %>
+    <%= f.text_field :category %><br>
+    <%= f.label :quantity %>
+    <%= f.text_field :quantity %><br>
+    <%= f.label :author %>
+    <%= f.text_field :author %><br>
+    <%= f.label :publisher %>
+    <%= f.text_field :publisher %><br>
+    <%= f.submit "Save Changes" %>
+<% end %>
