--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,6 @@
 <h1> Add a Book</h1>
     <%= form_for (@book) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
         <%= f.label :title %>
         <%= f.text_field :title %><br>
         <%= f.label :category %>
