--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,27 +1,26 @@
+<h1> Join the Library!!<h1>
+        <%= form_for(@user) do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
 
-<%= form_for(@user) do |f| %>
+            <%= f.label :name %>
+            <%= f.text_field :name %><br><br>
 
-    <%= render 'shared/error_messages' %>
-
-    <%= f.label :name %>
-    <%= f.text_field :name %><br><br>
-
-    <%= f.label :username %>
-    <%= f.text_field :username %><br><br>
-
-
-    <%= f.label :email %>
-    <%= f.email_field :email %><br><br>
+            <%= f.label :username %>
+            <%= f.text_field :username %><br><br>
 
 
-    <%= f.label :password %>
-    <%= f.password_field :password %><br><br>
+            <%= f.label :email %>
+            <%= f.email_field :email %><br><br>
 
 
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %><br><br>
+            <%= f.label :password %>
+            <%= f.password_field :password %><br><br>
 
 
-    <%= f.submit %>
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation %><br><br>
 
-<% end %>
+
+            <%= f.submit "Join" %>
+
+        <% end %>
