--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>PasswordResets</h1>
 <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
-    <%= render 'shared/error_messages' %>
+    <%= render 'shared/error_messages', object: f.object %>
     <%= hidden_field_tag :username, @user.email %>
     <%= f.label :password %>
     <%= f.password_field :password %>
