add new book and book requested link for admin

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,11 @@
 <h1> Books In the Library</h1>
+<% if admin %>
+    <ul>
+    <li> <%= link_to "Add Book", new_book_path %>
+    <li> <%= link_to "Books requested", bids_path %>
+    <ul>
+ <% end %>
+
 <table>
     <thead>
         <tr>
