--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,12 @@
+<% if current_user.admin %>
 <h1>All users</h1>
+
 <ol>
+    
     <% @users.each do |user| %>
         <li>
             <%= link_to user.username, user %>
         </li>
     <% end %>
     </ol>
+    <% end %>
