style add book and manage book links

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,8 @@
 <h1> Books In the Library</h1>
 <% if current_user.admin %>
-    <ul>
-    <li> <%= link_to "Add Book", new_book_path %>
-    <li> <%= link_to "Books requested", bids_path %>
+    <ul class="top-bar">
+    <li> <%= link_to "Add Book", new_book_path %> |
+    <li> <%= link_to "Manage Books", bids_path %>
     <ul>
  <% end %>
 
