--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Lost",  lost_path %>
+
 <h1> Books Requested</h1>
 <div>
     <table>
@@ -14,11 +16,10 @@
                 <td><%= bid.book.title %> </td>
                 <td><%= bid.book.author %> </td>
                 <td><%=  link_to "Release", release_path(bid_id: bid.id, 
-                                                         status: "borrowed", due_date: bid.due_date ),  class: "button" %>
+                                                         status: "borrowed"),  class: "button" %>
 
         </tr>
     <% end %>
-
     </table>
     <h1> Books Out </h1>
     <table>
@@ -28,6 +29,7 @@
             <th>Username</th>
             <th>Book title</th>
             <th> Author </th>
+            <th> Return date </th>
         </tr>
         <%  @releases.each do |bid|  %>
             <tr>
@@ -35,8 +37,9 @@
                 <td><%= bid.user.username %> </td>
                 <td><%= bid.book.title %> </td>
                 <td><%= bid.book.author %> </td>
+                <td> <%= days_remaining(bid)%></td>
                 <td><%= link_to "Return", bid,  method: :delete, data: 
-                    {confirm: "Is the book really returned?"}, class: "button" %>
+                    {confirm: "Is the book really returned?"}, class: "button" %></td>
 
         </tr>
     <% end %>
