account for recording the charges

--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -70,7 +70,7 @@
                         <td> <%= form_tag %>
                 <%= text_field_tag :charges %>
              </td>
-             <td><%= submit_tag "Account", method: :post %>
+             <td><%= submit_tag "Account", account_path(bid_id: bid.id, status: "account") %>
              </td>
                 
         </tr>
