--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
+<div class="row">
 <h1>BookLib</h1>
 <p> The book lib is a website for borrowing, and keeping books records</p>
 <p> <%= link_to "Signup", signup_path unless logged_in %>
-<p><%= image_tag('lib.jpg', width: 1300, height: 200, alt: "the library") %></p>
+</div>
