--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,12 +1,18 @@
-<h1>PasswordResets</h1>
-<%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
-    <%= render 'shared/error_messages', object: f.object %>
-    <%= hidden_field_tag :username, @user.email %>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
+<div class="row">
+    <h1>PasswordResets</h1>
+    <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <%= hidden_field_tag :username, @user.email %>
+        <div class="small-5">
+            <%= f.label :password %>
+            <%= f.password_field :password %>
+        </div>
 
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %> 
+        <div class="small-5">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation %> 
+        </div>
 
-    <%= f.submit "Update Password" %>
+        <%= f.submit "Update Password" %>
     <% end %>
+</div>
