--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,38 @@
+<section>
 <h1> Join the Library!!<h1>
         <%= form_for(@user) do |f| %>
             <%= render 'shared/error_messages', object: f.object %>
 
+            <div class="row">
+                <div class="small-5">
             <%= f.label :name %>
-            <%= f.text_field :name %><br><br>
+            <%= f.text_field :name %>
+            </div>
 
+                <div class="small-5">
             <%= f.label :username %>
-            <%= f.text_field :username %><br><br>
+            <%= f.text_field :username %>
+            </div>
 
 
+                <div class="small-5">
             <%= f.label :email %>
-            <%= f.email_field :email %><br><br>
+            <%= f.email_field :email %>
+            </div>
 
 
+                <div class="small-5">
             <%= f.label :password %>
-            <%= f.password_field :password %><br><br>
+            <%= f.password_field :password %>
+            </div>
 
 
+                <div class="small-5">
             <%= f.label :password_confirmation %>
-            <%= f.password_field :password_confirmation %><br><br>
+            <%= f.password_field :password_confirmation %>
+            </div>
 
 
-            <%= f.submit "Join" %>
+            <%= f.submit "Join",class: "button" %>
 
         <% end %>
