style the staticpages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,16 @@
 <h1>About</h1>
-<p>see about us</p>
-<p align="center"><%= image_tag('books.jpg', width: 700, height: 500, alt: "books") %></p>
+<div class="row">
+    <div class="small-4 column">
+        <p>Due to the advancement in technology in each day that we live the idea of one going to the library just to look
+        if you will find a certain book is becoming outdated. With the easy access to the internet you can do almost anything at
+        the comfort of your crib as you can in a library.
+        </p>
+        <p> The BookLib web application enables one to do all these. We ensure that books are always updated and the 
+        books out of the library tracked.
+        In case of a book loss the methods of replacing the book are communicated.
+        </p> 
+</div>
+<div class="small-8 column">
+    <p> <%= image_tag('books.jpg', width: 800, height: 100, alt: "books") %></p>
+</div>
+</div>
