--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,10 @@
         display: inline
     }
 }
+.head{
+    background-color:darkgray;
+}
+
 flash{
     color: black;
 
@@ -35,4 +39,13 @@ flash{
     }
 
 }
+.footer {
+    
+    background-color: gray;
+    color:black;
+    height:40px;
+    position:absolute;
+    width:100%;
 
+
+}
