footer stays down

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,8 +44,11 @@ flash{
     background-color: gray;
     color:black;
     height:40px;
-    position:absolute;
+    bottom:0;
+    margin-bottom:0px;
     width:100%;
+    margin:auto;
+    position:absolute;
 
 
 }
