footer stays at the bottom

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,10 +45,12 @@ flash{
     color:black;
     height:40px;
     bottom:0;
-    margin-bottom:0px;
     width:100%;
+    margin:0;
     margin:auto;
-    position:absolute;
+    padding:0px;
+    clear:both;
+    position:relative;
 
 
 }
