--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,10 @@
+<div class="row">
 <h1> Books In the Library</h1>
 <%= form_tag books_path, :method => 'get' do %>
+    <div class="small-4">
 <%= text_field_tag :search, params[:search] %>
 <%= submit_tag "Search", :name => nil %>
+</div>
 <% end %>
 <% if current_user.admin %>
     <ul class="top-bar">
@@ -25,4 +28,5 @@
         <%= render @books %>
     </tbody>
 </table>
+</div>
 
