--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,10 @@
-<h1>BookLib</h1>
-<div class="row">
-    <p> <%= image_tag('book.jpg', width: 800, height: 100,  alt: "the library") %></p>
+<div id="cover">
+    <div class="page-centered">
+        <h1>BookLib</h1>
+        <p> BookLib is an online Library for borrowing books.<br>
+        Signup to start enjoying our services or just search through to see our stocks</p>
+        <p> <%= link_to "Signup",  (signup_path unless logged_in),  class: "button success large" %>
+</div>
 </div>
 <div class="row">
     <p> The book lib is a website for borrowing searching and looking for a book.
@@ -11,5 +15,4 @@
     the website and the cost of that book is communicated to him/her.
     </p> <p> Join now and keep the fun going you do not need to go to the library and search for a book 
     in the shelves!!! Come on those days are gone. Welcome to 21<sup>st</sup> Centuary</p>
-    <p align="center"> <%= link_to "Signup",  (signup_path unless logged_in),  class: "button large" %>
 </div>
