--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <title><%= content_for?(:title) ? yield(:title) : "BookLib" %></title>
-
-        <%= stylesheet_link_tag    "application" %>
+        <%= stylesheet_link_tag    "application", media: 'all', 'data-turbolinks-track': 'reload' %>
         <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
         <%= csrf_meta_tags %>
 
@@ -20,7 +19,6 @@
                 <div id="flash" class="callout small <%= type %>" data-closable>
                     <%=  msg %></div>
             <% end %>
-            <%= render_breadcrumbs %>
             <%= yield %>
         </div>
         <%= render 'layouts/footer' %>
