--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
 <footer align="center">
-    <p align="center">&copy; booklib 2016
+    <p align="center">&copy; booklib <%= Date.today.year %>
     &nbsp   &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp designed and maintained by             | cessmbuguar@gmail.com |
     </p>
     </footer>
