--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
 <div class="footer">
 <footer align="center">
-    <p align="center">&copy; booklib <%= Date.today.year %>
-    &nbsp   &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp designed and maintained by             | cessmbuguar@gmail.com |
+    <br>
+    <p align="center">&copy; Booklib <%= Date.today.year %> &nbsp; &nbsp;
+    &nbsp;  Designed and maintained by &nbsp; @cess
     </p>
     </footer>
     </div>
