--- a/app/views/static_pages/support.html.erb
+++ b/app/views/static_pages/support.html.erb
@@ -1,2 +1,21 @@
 <h1>Support</h1>
-<p>Post your concern here</p>
+
+<hr>
+<div class="row">
+<div class="medium-6 columns">
+        <div class="circle">
+            <p><u>Post your concern here</u></p>
+            <p> Our users are the reason for our existance so feel free to 
+            make enquires concerning the app.
+    </div>
+    </div>
+<div class="medium-6 columns">
+        <div class="circle">
+            <p><u> Share your suggestions</u></p>
+            <p> Do you have anything in mind you wonna see in the next release?
+            Share with and maybe or maybe not it will be added.</p>
+    </div>
+    </div>
+    </div>
+    <br>
+    <br>
