--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,4 +19,29 @@
         font-size: 20px;
     }
 }
-
+#info {
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+hr {
+    height:6px;
+}
+.circle {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    font-family:courier new;
+    font-size: 16px;
+    color: green;
+    vertical-align: middle;
+    display:table-cell;
+    text-align: center;
+    padding-right: 10px;
+    background: black;
+    margin-left: 10px;
+    border-spacing:10px;
+}
+.about{
+    
+}
